--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,2 +1,10 @@
 @import './base.css';
 
+.container{
+   max-width: 1400px;
+   padding-left: 40px;
+   padding-right: 40px;
+   margin: 0 auto;
+   border: 1px solid red; 
+} 
+
